# PyWorkout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLANNING.md  README.md  SECURITY.md  __init__.py  __main__.py  cli.py  config.py  data.py  gui.py  history.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  docker-publish.yml  push-to-pypi.yml  tests.yml
docs/: CUSTOMIZATION.md  README.md  TESTING.md  USAGE.md  config.sample.json
tests/: conftest.py  test_cli.py  test_config.py  test_history.py  test_main.py
